# dv

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/web/: index.html
assets/web/css/: style.css
assets/web/js/: app.js
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  shortcuts.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  manager.rs  plugin.rs  tests.rs  types.rs
crates/plugins/crypto/: Cargo.toml
crates/plugins/crypto/src/: lib.rs
crates/plugins/elasticsearch/: Cargo.toml
crates/plugins/elasticsearch/src/: lib.rs
crates/plugins/file-tool/: Cargo.toml
crates/plugins/file-tool/src/: lib.rs
crates/plugins/git-tools/: Cargo.toml
crates/plugins/git-tools/src/: lib.rs
crates/plugins/http-client/: Cargo.toml
crates/plugins/http-client/src/: lib.rs
crates/plugins/json-tool/: Cargo.toml
crates/plugins/json-tool/src/: lib.rs
crates/plugins/log-search/: Cargo.toml
crates/plugins/log-search/src/: lib.rs
crates/plugins/middleware/: Cargo.toml
crates/plugins/middleware/src/: lib.rs
crates/plugins/script-runner/: Cargo.toml
crates/plugins/script-runner/src/: lib.rs
crates/plugins/service-status/: Cargo.toml
crates/plugins/service-status/src/: lib.rs
crates/plugins/sysinfo/: Cargo.toml
crates/plugins/sysinfo/src/: lib.rs
crates/plugins/terminal/: Cargo.toml
crates/plugins/terminal/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  dashboard.rs  lib.rs  theme.rs
crates/tui/src/middleware/: caddy.rs  config.rs  discovery.rs  docker.rs  es.rs  kafka.rs  mod.rs  nginx.rs  redis.rs  tomcat.rs
crates/web/: Cargo.toml
crates/web/src/: dashboard.rs  docker.rs  lib.rs  middleware.rs  server.rs
scripts/: build-release.sh  install.sh  release.sh
