[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/tui",
    "crates/web",
    "crates/plugins/json-tool",
    "crates/plugins/terminal",
    "crates/plugins/crypto",
    "crates/plugins/log-search",
    "crates/plugins/service-status",
    "crates/plugins/middleware",
    "crates/plugins/script-runner",
    "crates/plugins/git-tools",
    "crates/plugins/http-client",
    "crates/plugins/file-tool",
    "crates/plugins/elasticsearch",
    "crates/plugins/sysinfo",
]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8"

# Web
mime_guess = "2"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"

# Plugin loading
libloading = "0.8"

# Plugin-specific
base64 = "0.22"
aes = "0.9"
cbc = "0.1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
digest = "0.10"
rand = "0.8"
jsonwebtoken = "9"
regex = "1"
grep = "0.3"
notify = "7"
rhai = "1"
portable-pty = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
