[package]
name = "devtool-web"
version = "0.1.0"
edition = "2021"

[dependencies]
devtool-core = { path = "../core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
mime_guess.workspace = true
sysinfo = "0.33"
futures-util = "0.3"
