[package]
name = "devtool-plugin-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
devtool-core = { path = "../../core" }
base64.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
hmac.workspace = true
digest.workspace = true
hex = "0.4"
